--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "progressive-image.js",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "progressive lazy-loading image system",
   "main": "dist/progressive-image.js",
   "files": [
-    "dist/progressive-image.css"
+    "dist/**/*"
   ],
   "scripts": {
     "build": "npm i && gulp",
@@ -27,8 +27,9 @@
     "load"
   ],
   "license": "MIT",
+  "browserslist": ["> 1%", "ie 10", "ie 11"],
   "devDependencies": {
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "^9.6.0",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
