--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "progressive-image.js",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "progressive lazy-loading image system",
   "main": "dist/progressive-image.js",
   "files": [
@@ -27,9 +27,13 @@
     "load"
   ],
   "license": "MIT",
-  "browserslist": ["> 1%", "ie 10", "ie 11"],
+  "browserslist": [
+    "> 1%",
+    "ie 10",
+    "ie 11"
+  ],
   "devDependencies": {
-    "autoprefixer": "^9.6.0",
+    "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
