--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "progressive-image.js",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "progressive lazy-loading image system",
-  "main": "dist/progressive-image.js",
+  "browser": "./dist/progressive-image.js",
   "files": [
     "dist/**/*"
   ],
@@ -33,10 +33,10 @@
     "ie 11"
   ],
   "devDependencies": {
-    "autoprefixer": "^9.8.4",
-    "cssnano": "^4.1.10",
-    "gulp": "^4.0.2",
-    "gulp-postcss": "^8.0.0",
-    "gulp-terser": "^1.2.0"
+    "autoprefixer": "10.3.6",
+    "cssnano": "5.0.8",
+    "gulp": "4.0.2",
+    "gulp-postcss": "9.0.1",
+    "gulp-terser": "2.1.0"
   }
 }
